svc-nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-deployment
  namespace: labnginx
spec:
  #type: NodePort
  ports:
  - port: 80
    #nodePort: 30002
  selector:
    app: nginx-pod
